--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "declarations": true
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "egg": "^2.15.1",
+    "egg-jwt": "^3.1.7",
     "egg-scripts": "^2.11.0",
     "egg-sequelize": "^6.0.0",
     "mysql2": "^2.3.0"
